--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "lazyboyjs",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "Wrapper to access and manipulate CouchDB server easily",
-  "main": "./dist/lazyboyjs.js",
+  "main": "./index.js",
   "scripts": {
     "prepublish": "tsc",
     "test": "make test"
@@ -14,15 +14,6 @@
     "couchdb",
     "typescript",
     "wrapper"
-  ],
-  "files": [
-    "dist/lazyboyjs.d.ts",
-    "dist/lazyboyjs.js",
-    "src/lazyboyjs.ts",
-    "test/tests.js",
-    "typings/globals/cradle.d.ts",
-    "typings/index.d.ts",
-    "makefile"
   ],
   "repository": {
     "type": "git",
