--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lazyboyjs",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "Wrapper to access and manipulate CouchDB server easily",
   "main": "./index.js",
   "scripts": {
@@ -14,6 +14,12 @@
     "couchdb",
     "typescript",
     "wrapper"
+  ],
+  "files": [
+    "index.js",
+    "dist",
+    "src",
+    "test"
   ],
   "repository": {
     "type": "git",
