--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "CommonJS",
     "target": "es5",
     "noImplicitAny" : true,
-    "sourceMap": false,
+    "sourceMap": true,
     "outDir": "dist"
   },
   "exclude": [
