--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "target": "es5",
     "noImplicitAny" : true,
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "noResolve": true
   },
   "exclude": [
     "dist/lazyboyjs.d.ts",
