--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "lazyboyjs",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Wrapper to access and manipulate CouchDB server easily",
-  "main": "./index.js",
+  "main": "dist/lazyboyjs.js",
+  "typings": "dist/lazyboyjs",
   "scripts": {
     "prepublish": "tsc",
     "test": "make test"
-  },
-  "typescript": {
-    "definition": "./dist/lazyboyjs.d.ts"
   },
   "keywords": [
     "couchdb",
@@ -16,7 +14,6 @@
     "wrapper"
   ],
   "files": [
-    "index.js",
     "dist",
     "src",
     "test"
