--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "CommonJS",
     "target": "es5",
     "noImplicitAny" : true,
-    "sourceMap": false
+    "sourceMap": false,
+    "outDir": "dist"
   },
   "exclude": [
     "dist",
