--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "cradle": "^0.7.1"
+    "cradle": "^0.7.1",
+    "lazy-format-logger": "0.0.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
