--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "typescript": "^2.2.1",
+    "typings": "^2.1.0"
   }
 }
