--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@ language: node_js
 node_js:
   - "7"
 before_script:
-  - npm install -g typescript
-script: tsc
+  - npm install -g typescript typings
+script:
+  - typings install
+  - tsc
