--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
 before_script:
   - npm install -g typings
   - npm install -g typescript
+services:
+  - couchdb
 script:
   - typings install
   - tsc
+  - npm test
