--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,10 @@ node_js:
 before_script:
   - npm install -g typings
   - npm install -g typescript
+  - typings install
+  - tsc
+  - mkdir ./dist/spec
 services:
   - couchdb
 script:
-  - typings install
-  - tsc
   - npm test
